proxy/client-envoy.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: service
              domains:
              - "*"
              routes:
              - match:
                  prefix: /
                route:
                  cluster: server
          http_filters:
          - name: envoy.router
            typed_config: {}
  - address:
      pipe:
        path: fallback-cluster-server_bk
    filter_chains:
    - filters:
      - name: envoy.tcp_proxy
        config:
          stat_prefix: ingress_tcp
          cluster: server_bk
  clusters:
  - name: server
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: server
      endpoints:
      - locality:
          region: US-West
          zone: az1
          sub_zone: sub1
        priority: 0
        lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: server
                port_value: 80
      - locality:
          region: US-East
          zone: az1
          sub_zone: sub1
        priority: 1
        lb_endpoints:
        - endpoint:
            address:
              pipe:
                path: fallback-cluster-server_bk
  - name: server_bk
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: server_bk
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: httpbin.org
                port_value: 80
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
